--- a/2026/week_7/insta_weekly_2026_7_gpt-5-2025-08-07.md
+++ b/2026/week_7/insta_weekly_2026_7_gpt-5-2025-08-07.md
@@ -1,106 +1,115 @@
 # Weekly Instagram Beauty Media Landscape Report
 
-- Key Takeaway: Feb 9–15, 2026 skewed ultra-sparkly and alt: blue shimmer eyes and vamp/grey-brown lips led the feed, anchored by the Shine By SD x @glamsmitty Blue Hues launch and Bella Beauté Bar’s Dead Roses II; short tutorial Reels and swatch explainers drove the highest intent and saves.
+- Key Takeaway: 2026-02-09 to 2026-02-15 leaned hyper-sparkly and alt: cool blue shimmer palettes and vampy lips stole the feed. Indie collabs (Shine By SD x @glamsmitty; Bella Beauté Bar Dead Roses II) converted visible “add to cart” energy, while Y2K-pink gloss and goth lip combos kept comments buzzing.
 
 ## 1. Overview
 
 - The Vibe:
-  - Collab-heavy week with launch build-up, eye-swatches, and chrome “transformations.”
-  - Tutorials split between complexion education (foundation blending, undertones, blush placement) and fast lip combo shorts.
-  - Valentine’s content bifurcated: hot-pink Y2K glosses vs goth/vamp lips; blue sparkle cut through the holiday pink.
+  - Blue, holographic sparkle everywhere (hand/eye swatches, labeled placement reels, macro close-ups).
+  - Alt/goth glam coexisted with Valentine’s Y2K-pink gloss content.
+  - Education-heavy reels (base blending, undertone training, blush placement) drove questions and saves.
+  - Multiple launch moments and first-impression swatch reels across indie brands.
 - Engagement Temperature:
-  - Hot. Multiple “ordered/alarm set” comments for Blue Hues and “just bought” for Dead Roses II.
-  - High Q&A under gloss/blushlighter posts (texture, shift, tone). Educational reels garnered gratitude and discussion.
+  - Hot. Frequent “Ordered,” “Alarm is set,” “Need this,” and shade-specific Qs (“Are they emollient or dry?” “Dupe?”).
+  - Tutorial reels and clearly labeled swatch placements outperformed static photos in comment depth.
+  - Community cross-tagging and code use noted across BBB, Shine By SD, Glisten, Melt, Viseart.
 
 ## 2. Product Momentum (Brand & Item Velocity)
 
-- Top Mentioned Brands:
-  - Shine By SD x @glamsmitty (Blue Hues 5-pan shimmer)
-  - Bella Beauté Bar (Dead Roses II, Crystallize; liners and Sparkle Balms)
-  - Fenty Beauty (Killawatt Wattabrat + new WhattaB Gloss Bomb)
-  - Glisten Cosmetics (Spectra stamp/lash, black pencil; new grey lip stain; Chroma Gloss)
-  - Blend Bunny (Diabla collab, Lins palette; pencils; lashes)
-  - r.e.m. beauty (cream blushlighters)
-  - Melt Cosmetics (Blurr Cream Primer; Barely Blushing pink powder; Welcome to Derry)
-  - Cosmic Brushes (Death palette; Astral Radiance blue highlight; liners/lipstick)
-  - Milk Makeup (Shimmer Sticks; Hydro Grip Gel Concealer)
-  - Plus: Unearthly (Made a Monster), Lethal (Luminol), Terra Moons, Fyrinnae Pixie Epoxy, Kiko Milano glosses, Byredo Vesuvio, Viseart Apricotine, MBA Cosmetics Prism, Wicked Widow Rocky Horror, Dede’s Signature palettes, Gourmande Girls.
+- Top Mentioned Brands (frequency + cross-creator usage):
+  - Shine By SD Cosmetics (Blue Hues collab with @glamsmitty; brand assembly/launch content; multiple creator swatches).
+  - Bella Beauté Bar (Dead Roses II, Crystallize; lip sparkle balms/liners; multi-creator looks/sales mentions).
+  - Glisten Cosmetics (Spectra pencils/stamps/lashes; Chroma Gloss; new grey lip stain; frequent in lip/eye detailing).
+  - Fenty Beauty (Wattabrat highlighter; Wattab Gloss Bomb “Wattab”; used as eye/lip pairing).
+  - Blend Bunny (Diabla; Ellis Atlantis Vol.1; pencils/lashes; widely used in base eye structures).
+  - Unearthly Cosmetics (Made a Monster palette; metallic “Darkling” lips; liners; repeated in alt looks).
+  - Cosmic Brushes (Death palette; Astral Radiance blue highlight; runway liner; repeated shoutouts).
+  - Danessa Myricks (Colorfix; base/serum; purple blush moments).
+  - Melt (Blurr Cream primer; Barely Blushing powder; Welcome to Derry palette).
+  - Plus: R.E.M. Beauty (new blushlighters), Kiko Milano (Valentine gloss), Milk Makeup (Shimmer Sticks, Hydro Grip Concealer), Patrick Ta (new concealer), Byredo (Vesuvio), MBA Cosmetics (Prism singles), Dede’s Signature, Gourmande Girls.
 
-- Viral Products:
-  - Shine By SD Blue Hues: “Alarm was set…just ordered!”; “Need her NOW”; repeated eye-swatch reels and palette assembly BTS.
-  - Bella Beauté Bar Dead Roses II: “Just bought this…”; “I really can’t wait to receive this”; multiple creators posting looks/swatch stacks.
-  - Fenty Wattabrat + WhattaB gloss: multiple reels; “my new favorite gloss”; requests for dupes/comparisons.
-  - Glisten grey lip stain: “I need this!”; “grabbed it…at launch”; strong novelty factor.
-  - r.e.m. beauty blushlighters: curiosity plus texture debate; “on trend” cream glow without sparkle.
+- Viral Products (cross-posting + comment specificity):
+  - Shine By SD x @glamsmitty Blue Hues (5-pan blue-leaning shimmer/holo): “Alarm was set—just ordered!”, “How much?”, shade fandom (Mist, Luminous, Tranquil).
+  - Bella Beauté Bar Dead Roses II: “Just bought this,” “Ready to dive headfirst,” multiple tutorials and close-ups sustaining interest.
+  - Fenty Wattabrat highlight + Wattab Gloss Bomb: multiple reels; dupe and undertone fit questions (“silver sparkles wash me out on brown skin?”).
+  - Glisten grey lip stain (Baby): “Grabbed it at 10:30 when it launched,” pairing with bright pink/UV gloss resonated.
+  - Unearthly “Made a Monster”: “In my wishlist,” comparison requests (Clionadh/Terra Moons).
+  - Budget wins: Wet n Wild Mother Fluffer blush/bronzer and Chrome Flakes impressed in GRWM; high praise for payoff/price.
+  - Patrick Ta Concealer: reluctant love (“hate when expensive things are actually good”).
+  - Melt Barely Blushing (pink) powder: preference and lavender-tone Qs show niche brightening demand.
 
-- The “Look” Breakdown:
-  - Eyes: Blue-forward shimmer (icy to teal), holographic specks, heavy sparkle toppers; lime/chartreuse and antique-gold inner corners; graphic liner (bat-wing spikes, aegyosal emphasis); rainbow heart/balloon motifs; dry-pressed sparkles applied over tacky bases (Fyrinnae Pixie Epoxy).
-  - Lips: Moody brown gloss (MOB Linger, Cosmic “10 out of 10”), grey stain layered with iridescent pink gloss (Isamaya), vamp purple/“Rouge Noir,” smudged gradient/black-edged liners.
-  - Cheeks: Shimmery blush-lighters (r.e.m., Huda Blush Filter baby pink), blue sheen highlights (Cosmic Brushes), Milk Shimmer Sticks; pink-tinted blurring powders (Melt Barely Blushing).
+- The “Look” Breakdown (texture/placement patterns):
+  - Eyes: blue/teal glows, hollowgraphic flecks, icy toppers; chrome flakes on mobile lid; neon/lime inner corners; heavily lit inner-corner/brow-bone highlights; graphic/stamp liners; colored lashes (bleach/blue).
+  - Lips: moody brown and grey gradients (black corners), oxblood/vampy Rouge Noir, glossy sparkly balms; pink Y2K glosses with blue-purple reflects; grey-stain + hot-pink gloss overlay.
+  - Cheeks: cream “blushlighters” (rem’s non-sparkle sheen), cool lavender/pink highlight sheens, occasional purple blush draping; pink/blue highlighters (Cosmic Brushes) for editorial pop.
 
 ## 3. Aesthetic & Hashtag Trends
 
 - Visual Themes:
-  - #bluemakeup #sparklymakeup #multichromeeyeshadow #gothmakeup #grungemakeup #rainbowmakeup #editorialmakeup
-  - Alt-Valentine: hearts, chrome shapes, but also vampy noir and grey.
-  - Education-first complexion content trending (#foundation technique, #undertone, #blushplacement).
-
+  - #bluemakeup #blueeyeshadow #sparklymakeup #editorialmakeup: overt shimmer and multichrome/holo payoff in macro.
+  - #gothmakeup #grungemakeup: moody lips, blackened liner corners, deep plums/oxblood.
+  - Y2K gloss nostalgia (#pinklipgloss), hearts/balloons graphic detailing; stamp liners for quick shapes.
+  - #cbeauty, #skullpanda influences (heavy aegyosal, blush-on-chin, brow lightening).
 - Color Stories:
-  - Electric blues/teals/cobalt; hot fuchsia and Y2K baby pink; lime/chartreuse/yellow pops; chocolate/espresso lips; grey and dusty purple vamp; cool blue/purple highlighters; apricot-coral + warm chocolate (Viseart/Byredo).
+  - Icy/cool blues and teals; grungy rainbows with chartreuse/yellow inner corners; hot magenta/fuchsia; dirty gold/chartreuse; vamp red-black; grey/taupe lips with pink flips.
 
 ## 4. Purchase-Intent Signals (From Comments)
 
 - “Add to Cart” Energy:
-  - “Alarm was set for 10:30 – just ordered!” (Blue Hues launch)
-  - “Just bought this & some other bellabeautebar palettes” (Dead Roses II)
-  - “I really can’t wait to receive this” (Dead Roses II swatches)
-  - “I need this!” (Glisten grey lip stain)
-  - “Going to be purchasing [MUA] when I run out” (MUA vs VB foundation dupe test)
-
-- Restock Demands:
-  - Not explicit, but “limited quantities” on Blue Hues + alarms set suggests rapid sell-through potential.
-
+  - Shine By SD Blue Hues: “Alarm was set—just ordered!” “Need her NOW.”
+  - Bella Beauté Bar Dead Roses II: “Just bought this,” “So ready to dive in.”
+  - Fenty Wattabrat/Wattab: “I need it now,” “Got the Wattab and love it.”
+  - Glisten grey lip stain: “I need this!” “Grabbed it at 10:30 when it launched.”
+  - Byredo Vesuvio: “I ordered this… arrives tomorrow.”
+- Restock/Availability:
+  - Blue Hues demand suggests limited-quantity urgency; ongoing “how much/are they emollient?” implies fast sell-through potential.
 - Curiosity Clusters:
-  - Texture/Formula: “Are they quite emollient or more dry?” (Blue Hues); “Are they gritty?” (sparkly glosses)
-  - Shade nuance: “Difference…Fenty darker pink vs Fuchsia Flex?”; “lavender powder recs?”
-  - Safety/comfort: Jcat plumping sting noted as strong
-  - Technique: foundation “finger test,” undertone matching exercises, flexible blush placement
+  - Blue Hues formula/finish: “Are they quite emollient or more dry?” “Would love to see these on eyes” (addressed with eye-swatch reels).
+  - Fenty Wattabrat: “Difference vs Fuchsia Flex?” “NYX dupe?”
+  - Technique: “Replace puff with angled sponge?” “Finger test on slow-drying foundation?” (from Robert’s base reel).
+  - Brightening powders: “Lavender recommendations?” (Tarte, KimChi Chic surfaced in replies).
+  - Unearthly chrome comparisons (Clionadh); ordering questions (intl interest).
 
 ## 5. Opportunities for the Store
 
 - Stocking Recommendations:
-  - Sparkly Blue Eye Edit: Shine By SD Blue Hues or similar blue-leaning, holo-fleck shimmers; tacky base (Fyrinnae Pixie Epoxy) to pair.
-  - Grungy Sparkle Palettes: Bella Beauté Bar Dead Roses II; Unearthly Made a Monster; Wicked Widow Rocky Horror; Byredo Vesuvio (lux alt).
-  - Lip Bar Expansion: Grey stain (Glisten), vamp purple/rouge-noir bullets and lacquers (Chanel analogue), chocolate-brown creams, moody gloss toppers (Isamaya, Lisa Eldridge, NYX/Jcat at budget).
-  - Glow Segment: r.e.m. cream blushlighters (non-sparkle sheen), Milk Shimmer Sticks, Cosmic Brushes blue highlight.
-  - Base Tools: Melt Barely Blushing pink powder, Blurr Cream primer; puffs/flat brushes for press-and-push technique.
+  - Blue shimmer/holo singles: prioritize Blue Hues if accessible; otherwise analogs (ice toppers, teal/cobalt metallics, holo sparkle toppers). Merchandise by “light-to-deep shimmer ladder.”
+  - Grungy rainbow builders: chartreuse/lime metallics; magenta/violet mattes; dirty golds for inner-corner pops.
+  - Y2K sparkly pink gloss tiered set: Fenty Wattabrat/Wattab (premium), Lisa Eldridge Peekaboo Pink (lux), Half Magic Y2K Cherub (mid), Kiko 48 & NYX She Got Money & JCat (value).
+  - Grey/alt lip bar: Glisten grey stain + pairings (Isamaya Ultraviolet, moody brown glosses, black lip liner corners).
+  - Indie hits: Bella Beauté Bar Dead Roses II (and sparkle balms/liners), Unearthly Made a Monster + Darkling metal lips, Cosmic Brushes Astral Radiance trio (blue highlight).
+  - Base helpers: Melt Blurr Cream primer; pink/lavender brightening powders (Melt Barely Blushing, Tarte, KimChi Chic); Patrick Ta concealer for premium shopper.
+  - Budget sparkle: Wet n Wild Chrome Flakes; Mother Fluffer blush/bronzer pots (call out “squishy” texture).
 
 - Content Strategy:
-  - Short, labeled eye-swatch reels (on-eye, placement overlays) and lip-combo shorts convert.
-  - Side-by-side “save vs spend” complexion tests (MUA vs VB) drive debate and purchase.
-  - Educational micro-lessons (undertone training, “push-in” foundation) outperform static content.
-  - Launch journey/BTS assembly clips humanize indie drops and spark wishlist adds.
+  - 15–30s reels: labeled shade placement and eye/hand swatch macros (mirroring @s.andromedae and @glamsmitty) converted questions into buys.
+  - “Shade showdown” shorts: blue shimmer toppers vs price tiers; pink gloss ladder with arm swatches (pin affiliate codes in first comment).
+  - Lip-lab content: grey-stain + pink gloss recipes; grunge lip gradients (corner-deepening) with product tags.
+  - Education snippets: 30s cuts from base-blend/undertone tests tailored to store assortments; answer FAQs (puff vs sponge; emollient vs dry shimmer bases).
 
 - Gap Analysis:
-  - Customers wary of glitter emphasizing texture—curate finely milled sparkles and show “texture-friendly” application.
-  - Demand for tinted setting powders (pink/lavender) with undertone guidance—bundle with quick undertone quiz or tutorial.
-  - Plumping gloss sensitivity—offer low-tingle alternates and clearly mark sting level.
-  - Packaging pain point (tiny cream pots)—prioritize user-friendly pan sizes for bronzer/cream color.
+  - Warm/cool inclusivity in shimmer: feedback that silver reflects can wash out deeper skin—add rose-gold/peachy reflect toppers and demo with deep liners.
+  - Cream blushlighters beyond gold: curate pink/mauve/cool champagne sheens to counter “all gold” critique on rem launch.
+  - Brightening powders in lavender/pink: surface and compare undertone use cases.
+  - Colored mascaras: stock “bleach” and soybean/blue Spectra Lash, highlight daily-wear looks.
 
 ## 6. Special insights
 
 - Emerging Micro-Trends:
-  - Grey lip stain layered with pink/blue-shift gloss (grey + candy tones) as an alt-Valentine statement.
-  - Blue highlighter as a daily cheek sheen (not just inner corner).
-  - Bleached/colored lashes (Glisten Bleach/Soybean, Maroon) edging into mainstream looks.
-  - Holographic speck inclusion in shimmers (callouts to “holo” flecks across Blue Hues).
+  - Grey lip stain as base for vivid/gloss toppers (pink/UV/blue) bridging goth and Y2K—ripe for kit bundles.
+  - Blue holographic highlight accents (Cosmic Brushes) used as face/eye hybrid; blue inner-corner iciness resurging.
+  - Holo-reflect indie shimmers: new Shine By SD holographic mica read as “extra special sparkle”; expect copycats.
 
 - Unexpected Pairings:
-  - Black eyeliner pencils repurposed as lip liners; ash-grey waterlines to cool down hot-pink eyes.
-  - Warm metallics from luxury palettes used as luminous blush/highlight duos (Byredo/Viseart).
-  - Lime/chartreuse inner corners with magenta lids—high-contrast focal point creators replicate.
+  - Fenty Wattabrat highlight repurposed on eyes and paired with matching Gloss Bomb.
+  - Chartreuse/yellow inner corners inside fuchsia/purple eye looks (grungy rainbow with contrast pop).
+  - Black lip liner only at corners over brown/grey liners to sculpt 3D pout without full black outline.
 
 - Creative insight:
-  - “Palette hopping” (mixing 2–4 palettes per look) is creator-normal; shoppers follow this behavior. Merchandize micro-curations by color story (Blue Sparkle Capsule; Grunge Rainbow; Vamp Lip Wardrobe) across brands.
-  - Blue is spring’s disruptor: position blue shimmer toppers and teal/cobalt singles as the season’s hero SKUs, not just pinks.
-  - For conversions, pair every dry, high-sparkle formula with a recommended tacky base and a “finger vs brush” demo clip; it answers the top friction points before they’re asked.
+  - Authentic GRWMs around mental health and lifestyle (med talk; “gaming-ready glam”) are pulling exceptional engagement; pair sensory-forward textures (squishy creams, chrome flakes) with calming, ASMR-ish demos.
+  - Cross-culture style cues (Skullpanda aegyosal, bleached brows, blush-on-chin) are slipping into alt Western looks—fast, simple “borrow this detail” shorts can seed trend adoption.
+
+--- 
+Data notes:
+- Highest visible conversion cues: Blue Hues launch threads (“Alarm set/just ordered”), BBB Dead Roses II (“just bought”), Glisten grey stain (“grabbed at launch”).
+- High-performing formats: short labeled swatch reels; technique explainers; collab storytelling; macro sparkle reveals.
